--- a/css/main.css
+++ b/css/main.css
@@ -35,6 +35,10 @@
   font-style: normal;
 }
 
+select::-ms-expand {
+  display: none;
+}
+
 html,
 body {
   width: 100%;
@@ -226,7 +230,7 @@ h6 {
 }
 
 .owl-carousel .owl-stage-outer {
-  overflow: visible;
+  /* overflow: visible; */
 }
 
 @media screen and (max-width: 800px) {
@@ -338,11 +342,12 @@ h6 {
 
 .header__logo {
   margin-right: 30px;
+  height: 50px;
 }
 
 .header__logo img {
   width: 100%;
-  height: 100%;
+  height: auto;
 }
 
 .header__search {
@@ -659,6 +664,11 @@ h6 {
   -ms-flex-pack: end;
   justify-content: flex-end;
 }
+@media (min-width: 1025px) {
+  .banner {
+    padding-bottom: 200px
+  }
+}
 
 .banner .container {
   padding: 50px 150px;
@@ -747,7 +757,7 @@ h6 {
 }
 
 .banner__left {
-  padding-right: 10%;
+  /* padding-right: 10%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -757,7 +767,9 @@ h6 {
   flex-direction: column;
   -webkit-box-pack: start;
   -ms-flex-pack: start;
-  justify-content: flex-start;
+  justify-content: flex-start;*/
+  position: relative;
+  max-width: 100%;
   z-index: 5;
 }
 
@@ -1041,7 +1053,7 @@ h6 {
   }
 
   .banner__slider .owl-item img {
-    width: 160%;
+    /* width: 160%; */
   }
 
   .banner__left {
@@ -1063,7 +1075,7 @@ h6 {
 }
 
 .main-page .brends {
-  padding-top: 150px;
+  /* padding-top: 150px; */
 }
 
 .brends {
@@ -1071,19 +1083,20 @@ h6 {
 }
 
 .brends__list {
-  display: -webkit-box;
+  /* display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
   -ms-flex-pack: justify;
   justify-content: space-between;
-  width: 100%;
+  width: 100%; */
   padding: 30px 0;
   z-index: 10;
+  margin-top: 40px;
 }
 
 .brends__item {
-  font-size: 20px;
+  /* font-size: 20px;
   display: inline-block;
   margin-bottom: 30px;
   padding: 6px;
@@ -1094,11 +1107,16 @@ h6 {
   line-height: 1.6;
   letter-spacing: 0.5px;
   text-align: center;
-  width: 100%;
+  width: 100%; */
 }
 
 .brends__item a {
   color: #1f1f1f;
+  padding: 6px;
+  font-size: 20px;
+  line-height: 1.6;
+  letter-spacing: 0.5px;
+  text-align: center;
 }
 
 .brends__item:hover {
@@ -1156,6 +1174,7 @@ h6 {
   -ms-flex-preferred-size: 23%;
   flex-basis: 23%;
   min-width: 260px;
+  max-width: calc(100% / 4);
   margin-bottom: 20px;
   z-index: 1;
 }
@@ -1354,7 +1373,9 @@ h6 {
   padding: 0 100px;
   padding-bottom: 130px;
 }
-
+.about__info {
+  max-width: 100%;
+}
 .about__info img {
   width: 100%;
 }
@@ -2153,7 +2174,6 @@ h6 {
   width: 100%;
   overflow: hidden;
   position: relative;
-  height: 100%;
   scrollbar-width: none;
 }
 
@@ -2184,19 +2204,8 @@ h6 {
 }
 
 .news__item {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
-  -ms-flex-preferred-size: 48%;
-  flex-basis: 48%;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  margin: 0 15px;
+  flex-flow: column;
 }
 
 .news__img {
@@ -2237,6 +2246,11 @@ h6 {
   text-align: center;
   color: #595f6f;
   width: 70%;
+}
+@media screen and (max-width:640px){
+  .news__text {
+    width: 100%;
+  }
 }
 
 .news__btn {
@@ -3968,10 +3982,18 @@ h6 {
   border: solid 1px #00489c;
   margin-bottom: 10px;
 }
+.news__tag:hover {
+  background-color: #00489c;
+  color: #fff;
+}
 
-.news__one {
+/* .news__one {
   -ms-flex-preferred-size: calc(16.6% - 25px);
   flex-basis: calc(16.6% - 25px);
+} */
+.news-one a {
+  display: block;
+  width: 100%;
 }
 
 .news__one-text {
@@ -4096,17 +4118,9 @@ h6 {
   }
 
   .news__tags {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: column;
-    flex-direction: column;
-    width: 100%;
-    -webkit-box-align: start;
-    -ms-flex-align: start;
-    align-items: flex-start;
+    flex-flow: row wrap;
+    justify-content: flex-start;
   }
 }
 
@@ -6057,9 +6071,9 @@ h6 {
   justify-content: flex-start;
 }
 
-.newslist-page .news__popular .news__outer {
+/* .newslist-page .news__popular .news__outer {
   overflow: visible;
-}
+} */
 
 .newslist-page .news__popular .news__outer .owl-item {
   opacity: 1;
@@ -6278,10 +6292,67 @@ footer.footer {
 
 /*# sourceMappingURL=main.css.map */
 
+/* animations */
+*, *:before, *:after {
+  transition: all cubic-bezier(1, 1, 0, 1) .3s;
+}
 /* components */
 .mb-3 {
   margin-bottom: 30px;
 }
+/* button */
+.component--button {
+  position: relative;
+  cursor: pointer;
+}
+.button--stretch {
+  display: block;
+}
+.button--inline {
+  display: inline-block;
+}
+.button--big {
+  border-radius: 5px;
+  box-shadow: 10px 10px 30px 0 rgba(0, 0, 0, 0.15);
+  font-family: Circe;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 50px;
+  padding: 0 65px;
+}
+.component--button::first-letter {
+  text-transform: uppercase;
+}
+/* button white */
+.button--big.button--white {
+  background-color: #fff;
+  color: #00489c;
+}
+.button--big.button--white:hover {
+  background-color: #709be7;
+  color: #fff;
+}
+.button--big.button--white:disabled {
+  background-color: #00489c;
+  color: #fff;
+}
+.button--big.button--white.bordered {
+  border: 1px solid #0061c5;
+}
+/* button--blue */
+.button--big.button--blue {
+  background-color: #00489c;
+  color: #fff;
+}
+.button--big.button--blue:hover {
+  background-color: #709be7;
+  color: #fff;
+}
+.button--big.button--blue:disabled {
+  background-color: #00489c;
+  color: #fff;
+}
+/* label width checkbox */
 .component--label_with_checkbox {
   cursor: pointer;
 }
@@ -6303,6 +6374,56 @@ footer.footer {
 }
 .component--label_with_checkbox label input[type="checkbox"]:checked + i::after {
   background-image: url(../img/icons/checkbox-blue.svg);
+}
+/* inputs */
+.component--input {
+  position: relative;
+}
+.component--input label {
+  position: absolute;
+  display: block;
+  left: 30px;
+  top: 50%;
+  transform: translateY(-50%);
+  z-index: 0;
+}
+.component--input input:focus-within + label,
+.component--input input:focus + label,
+.component--input input:valid + label {
+  left: 0;
+  top: -25%;
+  color: #fff;
+}
+.component--input input:valid + label:after {
+  content: '✓';
+  margin-left: 10px;
+}
+.component--input input:invalid + label {
+  color: #709be7;
+}
+.component--input input:not([type="submit"]) {
+  position: relative;
+  width: 100%;
+  border: none;
+  outline: none;
+  margin: 0;
+  padding: 16px 30px;
+  z-index: 1;
+}
+.input--bordered {
+  border: 1px solid #dddfe7;
+  border-radius: 5px;
+  background: transparent;
+}
+.input--bordered input {
+  background: transparent;
+  color: #fff;
+}
+/* sliders */
+[data-slider="events"] article {
+  display: flex;
+  flex-flow: column;
+  align-items: center;
 }
 
 @media screen and (max-width:640px) {
