--- a/css/main.css
+++ b/css/main.css
@@ -70,6 +70,10 @@ body {
   scrollbar-width: none;
 }
 
+#invisible {
+  display: none;
+}
+
 .wrapper {
   -webkit-box-flex: 1;
   -ms-flex-positive: 1;
@@ -554,8 +558,13 @@ h6 {
   background-image: url("../img/icons/Insta-active.svg");
 }
 
+[data-entity="cities"] {
+  cursor: pointer;
+}
+
 .cities__list {
   color: #1f1f1f;
+  cursor: pointer;
 }
 
 .cities__phone a {
@@ -1693,7 +1702,28 @@ h6 {
   height: 16px;
   position: absolute;
   left: 0;
-  top: 3px;
+}
+.event-level:before,
+.event-list:before {
+  display: none;
+}
+.event-list,
+.event-level {
+  text-shadow: 10px 10px 30px #eaf1ff;
+  font-size: 16px;
+  line-height: 1.19;
+  letter-spacing: normal;
+  text-align: center;
+  border-radius: 5px;
+  /* -webkit-box-shadow: 10px 10px 30px 0 rgba(0, 0, 0, 0.15);
+  box-shadow: 10px 10px 30px 0 rgba(0, 0, 0, 0.15); */
+  border: solid 1px #0061c5;
+  background-color: #ffffff;
+  padding: 0
+}
+.event-list select,
+.event-level select {
+  padding: 1em;
 }
 
 .cities__title select {
