--- a/css/main.css
+++ b/css/main.css
@@ -573,11 +573,18 @@ h6 {
 .cities__list {
   color: #1f1f1f;
   cursor: pointer;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-flow: row wrap;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: row wrap;
+          flex-flow: row wrap;
 }
 .cities__list li {
-  flex: 0 1 33%;
+  -webkit-box-flex: 0;
+      -ms-flex: 0 1 33%;
+          flex: 0 1 33%;
 }
 
 .cities__phone a {
@@ -612,11 +619,18 @@ h6 {
     margin-bottom: 180px;
   }
   .cities__list {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-flow: row wrap;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: row wrap;
+            flex-flow: row wrap;
   }
   .cities__list li {
-    flex: 0 1 calc(100% / 3)
+    -webkit-box-flex: 0;
+        -ms-flex: 0 1 calc(100% / 3);
+            flex: 0 1 calc(100% / 3)
   }
 }
 
@@ -633,7 +647,9 @@ h6 {
   }
 
   .cities__list li {
-    flex: 0 1 50%;
+    -webkit-box-flex: 0;
+        -ms-flex: 0 1 50%;
+            flex: 0 1 50%;
   }
 
   .header__logo {
@@ -671,7 +687,9 @@ h6 {
   }
 
   .cities__list li {
-    flex: 1 0 100%;
+    -webkit-box-flex: 1;
+        -ms-flex: 1 0 100%;
+            flex: 1 0 100%;
   }
 
   .header__search {
@@ -706,7 +724,10 @@ h6 {
     padding-bottom: 200px
   }
   .cities__list {
-    flex-flow: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: column;
+            flex-flow: column;
   }
 }
 
@@ -923,7 +944,6 @@ h6 {
   text-align: left;
   color: #ffffff;
   -webkit-transform: rotate(90deg);
-  -ms-transform: rotate(90deg);
   transform: rotate(90deg);
   white-space: nowrap;
   left: 38%;
@@ -1175,8 +1195,6 @@ h6 {
   display: none;
   width: 165px;
   height: 165px;
-  background: -webkit-linear-gradient(227deg, #709be7, #00489c);
-  background: -o-linear-gradient(227deg, #709be7, #00489c);
   background: linear-gradient(223deg, #709be7, #00489c);
   border-radius: 5px;
   -webkit-box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.08);
@@ -1626,9 +1644,15 @@ h6 {
 
 .courses__list .owl-nav {
   position: absolute;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex: 1;
-  justify-content: space-between;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   top: 0;
   left: 0;
   width: 100%;
@@ -1640,7 +1664,9 @@ h6 {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  align-items: flex-start;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
 }
 
 .courses__desc {
@@ -1766,7 +1792,9 @@ h6 {
 }
 
 [data-entity="event-calendar"] {
-  flex: 1 0 50%;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 0 50%;
+          flex: 1 0 50%;
   max-width: 50%;
   border-radius: 5px;
   -webkit-box-shadow: 20px 20px 40px 0 rgba(0, 0, 0, 0.1);
@@ -1777,7 +1805,8 @@ h6 {
   margin: 0;
   padding: 20px 30px 30px 30px;
   cursor: default;
-  user-select: none;
+  -webkit-user-select: none;
+          user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
   -moz-user-select: none;
@@ -1785,21 +1814,32 @@ h6 {
 @media screen and (max-width:650px){
   [data-entity="event-calendar"] {
     width: 100%;
-    flex: 1 0 100%;
+    -webkit-box-flex: 1;
+        -ms-flex: 1 0 100%;
+            flex: 1 0 100%;
     max-width: 360px;
     padding: 15px
   }
   .courses__cities {
     margin: 0;
-    flex: 0 1 auto;
+    -webkit-box-flex: 0;
+        -ms-flex: 0 1 auto;
+            flex: 0 1 auto;
   }
 }
 .calendar-body {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-flow: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: column;
+          flex-flow: column;
   padding-top: 10px;
 }
 .cblock {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
 }
 .title--month{
@@ -1809,11 +1849,17 @@ h6 {
   top: -8px;
 }
 .cblock--list {
-  flex-direction: row;
-  justify-content: flex-start;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
 }
 .cblock--weekdays {
-  flex-wrap: nowrap;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
 }
 .cblock--weekdays li {
   font-size: 10px;
@@ -1824,16 +1870,24 @@ h6 {
   font-family: 'Circe';
 }
 .cblock--days {
-  flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 .cblock--list li {
-  flex: 1 0 calc(100% / 7);
+  -webkit-box-flex: 1;
+      -ms-flex: 1 0 calc(100% / 7);
+          flex: 1 0 calc(100% / 7);
   max-width: calc(100% / 7);
   line-height: 2.6em;
-  align-content: center;
-  align-items: center;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   text-align: center;
-  justify-content: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 .cblock--list li a {
   display: block;
@@ -2025,7 +2079,10 @@ h6 {
     padding-top: 0px;
     max-width: 100%;
     padding-bottom: 70px;
-    flex-flow: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: column;
+            flex-flow: column;
   }
 
   .courses .datepicker--nav-action {
@@ -2042,7 +2099,9 @@ h6 {
 
   .courses__item {
     width: 100%;
-    align-items: flex-start;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
   }
 
   .courses .datepicker {
@@ -2050,7 +2109,9 @@ h6 {
   }
 
   .courses__cities {
-    flex: 0 1 auto;
+    -webkit-box-flex: 0;
+        -ms-flex: 0 1 auto;
+            flex: 0 1 auto;
   }
 
   .courses__list {
@@ -2062,7 +2123,9 @@ h6 {
 
 @media screen and (max-width: 650px) {
   .courses__cities {
-    flex: 0 1 auto;
+    -webkit-box-flex: 0;
+        -ms-flex: 0 1 auto;
+            flex: 0 1 auto;
   }
 
   .courses__list .owl-nav {
@@ -2075,8 +2138,13 @@ h6 {
 
   .courses__info {
     padding-bottom: 0;
-    flex-flow: column;
-    flex: 0 1 auto;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: column;
+            flex-flow: column;
+    -webkit-box-flex: 0;
+        -ms-flex: 0 1 auto;
+            flex: 0 1 auto;
   }
 
   .courses .main-title {
@@ -2119,7 +2187,9 @@ h6 {
   .courses__item {
     -ms-flex-wrap: wrap;
     flex-wrap: wrap;
-    align-items: flex-start;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
   }
 
   .courses__item .banner__link {
@@ -2337,7 +2407,6 @@ h6 {
   top: 0;
   left: 0;
   -webkit-transition: .3s;
-  -o-transition: .3s;
   transition: .3s;
 }
 
@@ -2356,10 +2425,18 @@ h6 {
 }
 
 .news__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-flow: column;
-  align-content: center;
-  align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: column;
+          flex-flow: column;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .news__img {
@@ -3254,7 +3331,6 @@ h6 {
 
 .courses-page .courses__list .owl-nav .owl-next {
   -webkit-transform: rotate(180deg);
-  -ms-transform: rotate(180deg);
   transform: rotate(180deg);
 }
 
@@ -3416,11 +3492,7 @@ h6 {
 
 .education__subject {
   background: #00489c;
-  background: -moz-linear-gradient(left, #00489c 0%, white 100%);
   background: -webkit-gradient(left top, right top, color-stop(0%, #00489c), color-stop(100%, white));
-  background: -webkit-linear-gradient(left, #00489c 0%, white 100%);
-  background: -o-linear-gradient(left, #00489c 0%, white 100%);
-  background: -ms-linear-gradient(left, #00489c 0%, white 100%);
   background: -webkit-gradient(linear, left top, right top, from(#00489c), to(white));
   background: linear-gradient(to right, #00489c 0%, white 100%);
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#00489c', endColorstr='#ffffff', GradientType=1);
@@ -3443,7 +3515,6 @@ h6 {
   background: url(../img/icons/arrow-select.svg) center center no-repeat;
   background-size: 12px;
   -webkit-transition: .3s;
-  -o-transition: .3s;
   transition: .3s;
 }
 
@@ -3471,7 +3542,6 @@ h6 {
 
 .education__area:first-child .control {
   -webkit-transform: rotate(180deg);
-  -ms-transform: rotate(180deg);
   transform: rotate(180deg);
 }
 
@@ -4272,9 +4342,16 @@ h6 {
   }
 
   .news__tags {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-flow: row wrap;
-    justify-content: flex-start;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: row wrap;
+            flex-flow: row wrap;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
   }
 }
 
@@ -6011,8 +6088,6 @@ h6 {
   border-radius: 5px;
   -webkit-box-shadow: 20px 20px 40px 0 rgba(0, 0, 0, 0.1);
   box-shadow: 20px 20px 40px 0 rgba(0, 0, 0, 0.1);
-  background: -webkit-linear-gradient(216deg, #709be7, #00489c);
-  background: -o-linear-gradient(216deg, #709be7, #00489c);
   background: linear-gradient(234deg, #709be7, #00489c);
   display: -webkit-box;
   display: -ms-flexbox;
@@ -6444,10 +6519,9 @@ footer.footer {
   justify-content: center;
 }
 
-/*# sourceMappingURL=main.css.map */
-
 /* animations */
 *, *:before, *:after {
+  -webkit-transition: all cubic-bezier(1, 1, 0, 1) .3s;
   transition: all cubic-bezier(1, 1, 0, 1) .3s;
 }
 /* components */
@@ -6467,7 +6541,8 @@ footer.footer {
 }
 .button--big {
   border-radius: 5px;
-  box-shadow: 10px 10px 30px 0 rgba(0, 0, 0, 0.15);
+  -webkit-box-shadow: 10px 10px 30px 0 rgba(0, 0, 0, 0.15);
+          box-shadow: 10px 10px 30px 0 rgba(0, 0, 0, 0.15);
   font-family: Circe;
   font-size: 16px;
   font-weight: 400;
@@ -6511,8 +6586,12 @@ footer.footer {
   cursor: pointer;
 }
 .component--label_with_checkbox label {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: top;
+  -webkit-box-align: top;
+      -ms-flex-align: top;
+          align-items: top;
 }
 .component--label_with_checkbox label i::after {
   content: '';
@@ -6538,7 +6617,8 @@ footer.footer {
   display: block;
   left: 30px;
   top: 50%;
-  transform: translateY(-50%);
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
   z-index: 0;
 }
 .component--input input:focus-within + label,
@@ -6575,18 +6655,29 @@ footer.footer {
 }
 /* sliders */
 [data-slider="events"] article {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-flow: column;
-  align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: column;
+          flex-flow: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 @media screen and (max-width:640px) {
   .sales__new-all label {
-    justify-content: space-between;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
   }
 }
 @media (min-width:641px) {
   .sales__new-all label {
-    justify-content: flex-start;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
   }
 }
